--- a/index.html
+++ b/index.html
@@ -2,51 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analog Clock</title>
     <link rel="stylesheet" href="style.css">
+    <title>Analog Clock</title>
 </head>
 
 <body>
-    <div class="clock">
-
-        <div class="hour">
-            <div class="hr" id="hr"></div>
-        </div>
-
-        <div class="min">
-            <div class="mn" id="mn"></div>
-        </div>
-
-        <div class="sec">
-            <div class="sc" id="sc"></div>
-        </div>
-
+    <div id="clockContainer">
+        <div id="hour"></div>
+        <div id="minute"></div>
+        <div id="second"></div>
     </div>
 
-    <script type="text/javascript">
-        const deg = 6;
-        const hr = document.querySelector('#hr');
-        const mn = document.querySelector('#mn');
-        const sc = document.querySelector('#sc');
-
-        setInterval(() => {
-
-            let day = new Date();
-            let hh = day.getHours() * 30;
-            let mm = day.getMinutes() * deg;
-            let ss = day.getSeconds() * deg;
-
-            hr.style.transform = `rotateZ(${(hh) + (mm / 12)}deg)`;
-            mn.style.transform = `rotateZ(${mm}deg)`;
-            sc.style.transform = `rotateZ(${ss}deg)`;
-
-        })
-
-    </script>
-
+    <script src="index.js"></script>
 </body>
 
 </html>
